# tars

./: .bot.conf.swp  .bot.py.swp  .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  CONTRIBUTING.md  Pipfile  README.md  bot.conf  bot.py  bundle.526.js  bundle.618.js  bundle.main.js  case.conf  case.skipirc.conf  case.synirc.conf  header-files-work.vim  header-files-work.vim!  index.html  kipp.skipirc.conf  logmessage.py  pylintrc  pyproject.toml  requirements.txt  setup.py  tars.conf  tars.skipirc.conf  tars.synirc.conf
.github/: CONTRIBUTING.md
.github/workflows/: documentation.yaml
commands/: README.md  __init__.py  _command.py  admin.py  analytic.py  checkcomments.py  chevron.py  colour.py  converse.py  dbq.py  gib.py  gimmick.py  hug.py  info.py  nick.py  password.py  pingall.py  promote.py  prop.py  propagate.py  record.py  refactor.py  reptile.py  search.py  shortest.py  showmore.py
config/: case.skipirc.conf  defer_list.toml  kipp.skipirc.conf  tars.skipirc.conf
doc/help/: index.html
docs/help/: concise.html  index.html
helpers/: api.py  basecommand.py  build_chain.pyx  command.py  config.py  database.py  defer.py  error.py  greetings.py  parse.py  paste.py  scheduler.py
plugins/: .parsemessages.py.swo  commands.py  db.py  debug.py  log.py  logmessage.py  names.py  nickserv.py  parse.py  parsemessages.py  scheduler.py
tars/: __main__.py
tars/commands/: __init__.py  admin.py  converse.py  dbq.py  (+11 more)
test/: test_converse.py  test_crom.py  test_gib.py
utilities/: brackets.py  gevent_test.py  postcrawler.py  shortest.py  tag.py
(+44 files in other folders)
