[tool.black]
line-length = 79
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'

[tool.poetry]
name = "tars"
version = "2.0.2"
description = ""
authors = ["Ross Williams <rossjrw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyPika = "^0.48.1"
edtf = "^4.0.1"
fuzzywuzzy = "^0.18.0"
google-api-python-client = "^2.1.0"
markovify = "^0.9.0"
numpy = "^1.20.2"
pandas = "^1.2.3"
pendulum = "^2.1.2"
tomlkit = "^0.7.0"
munch = "^2.5.0"
emoji = "^1.2.0"
distro = "^1.5.0"
requests = "^2.25.1"
python-Levenshtein = "^0.12.2"
GitPython = "^3.1.14"
pyaib = {git = "https://github.com/rossjrw/pyaib.git"}
APScheduler = "^3.7.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
pytest = "^6.2.3"
black = "^20.8b1"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
